--- a/test/OpenTelemetry.AotCompatibility.TestApp/OpenTelemetry.AotCompatibility.TestApp.csproj
+++ b/test/OpenTelemetry.AotCompatibility.TestApp/OpenTelemetry.AotCompatibility.TestApp.csproj
@@ -14,6 +14,7 @@
       .github\workflows\ci.yml so that it runs for the project being added.
     -->
     <TrimmerRootAssembly Include="OpenTelemetry.Extensions" />
+    <TrimmerRootAssembly Include="OpenTelemetry.Extensions.AWS" />
     <TrimmerRootAssembly Include="OpenTelemetry.Extensions.Enrichment" />
     <TrimmerRootAssembly Include="OpenTelemetry.Instrumentation.Runtime" />
     <TrimmerRootAssembly Include="OpenTelemetry.Instrumentation.EventCounters" />
