--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -334,16 +334,18 @@ jobs:
     - name: Merging test results
       run: dotnet-coverage merge -r -f cobertura -o ./TestResults/Cobertura.xml ./TestResults/*.coverage
 
-    - uses: codecov/codecov-action@v3.1.6
+    - uses: codecov/codecov-action@v4
       continue-on-error: true # Note: Don't fail for upload failures
       env:
         OS: ${{ matrix.os }}
         TFM: ${{ matrix.version }}
+        token: ${{ secrets.CODECOV_TOKEN }}
       with:
         file: TestResults/Cobertura.xml
         env_vars: OS,TFM
         flags: unittests-Solution
         name: Code Coverage for solution on [${{ matrix.os }}.${{ matrix.version }}]
+        codecov_yml_path: .github/codecov.yml
 
   verify-aot-compat:
     needs: detect-changes
