Resolve security warnings in aspnet example applications.

--- a/examples/AspNet/Web.config
+++ b/examples/AspNet/Web.config
@@ -15,6 +15,11 @@
     <httpRuntime targetFramework="4.8" maxRequestLength="2147483647" executionTimeout="300"/>
   </system.web>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="SAMEORIGIN" />
+      </customHeaders>
+    </httpProtocol>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
       <remove name="OPTIONSVerbHandler"/>
