Fix security warning in views.

--- a/examples/AspNet/Views/Web.config
+++ b/examples/AspNet/Views/Web.config
@@ -25,6 +25,11 @@
   </appSettings>
 
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="SAMEORIGIN" />
+      </customHeaders>
+    </httpProtocol>
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
