[Exporter.Geneva] Resolve AOT warnings in OpenTelemetry.Exporter.Geneva
- Also use Regex source generator for faster startup, less memory usage, and the ability to trim the Regex engine.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -362,6 +362,7 @@ jobs:
       || contains(needs.detect-changes.outputs.changes, 'aot')
       || contains(needs.detect-changes.outputs.changes, 'aottestapp')
       || contains(needs.detect-changes.outputs.changes, 'build')
+      || contains(needs.detect-changes.outputs.changes, 'geneva')
       || contains(needs.detect-changes.outputs.changes, 'redis')
       || contains(needs.detect-changes.outputs.changes, 'shared')
     uses: ./.github/workflows/verifyaotcompat.yml
