--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
           redis: ['*/OpenTelemetry.Instrumentation.StackExchangeRedis*/**', 'examples/redis/**', '!**/*.md']
           resourcedetectors: ['*/OpenTelemetry.ResourceDetectors.*/**', '!**/*.md']
           runtime: ['*/OpenTelemetry.Instrumentation.Runtime*/**', 'examples/runtime-instrumentation/**', '!**/*.md']
+          sqlclient: ['*/OpenTelemetry.Instrumentation.SqlClient*/**', '!**/*.md']
           wcf: ['*/OpenTelemetry.Instrumentation.Wcf*/**', 'examples/wcf/**', '!**/*.md']
           solution: [
             'src/**',
@@ -64,6 +65,7 @@ jobs:
             '!*/OpenTelemetry.PersistentStorage*/**',
             '!*/OpenTelemetry.Instrumentation.Process*/**',
             '!examples/process-instrumentation/**',
+            '!*/OpenTelemetry.Instrumentation.SqlClient*/**',
             '!*/OpenTelemetry.Instrumentation.StackExchangeRedis*/**',
             '!examples/redis/**',
             '!*/OpenTelemetry.Instrumentation.Runtime*/**',
@@ -254,6 +256,17 @@ jobs:
       project-name: OpenTelemetry.Instrumentation.Runtime
       code-cov-name: Instrumentation.Runtime
 
+  build-test-sqlclient:
+    needs: detect-changes
+    if: |
+      contains(needs.detect-changes.outputs.changes, 'sqlclient')
+      || contains(needs.detect-changes.outputs.changes, 'build')
+      || contains(needs.detect-changes.outputs.changes, 'shared')
+    uses: ./.github/workflows/Component.BuildTest.yml
+    with:
+      project-name: OpenTelemetry.Instrumentation.SqlClient
+      code-cov-name: Instrumentation.SqlClient
+
   build-test-wcf:
     needs: detect-changes
     if: |
@@ -303,6 +316,7 @@ jobs:
             OpenTelemetry.Instrumentation.Owin.Tests.csproj,
             OpenTelemetry.Instrumentation.Process.Tests.csproj,
             OpenTelemetry.Instrumentation.Runtime.Tests.csproj,
+            OpenTelemetry.Instrumentation.SqlClient.Tests.csproj,
             OpenTelemetry.Instrumentation.StackExchangeRedis.Tests.csproj,
             OpenTelemetry.Instrumentation.Wcf.Tests.csproj,
             OpenTelemetry.PersistentStorage.FileSystem.Tests.csproj,
@@ -364,6 +378,7 @@ jobs:
       || contains(needs.detect-changes.outputs.changes, 'build')
       || contains(needs.detect-changes.outputs.changes, 'onecollector')
       || contains(needs.detect-changes.outputs.changes, 'redis')
+      || contains(needs.detect-changes.outputs.changes, 'sqlclient')
       || contains(needs.detect-changes.outputs.changes, 'shared')
     uses: ./.github/workflows/verifyaotcompat.yml
 
@@ -388,6 +403,7 @@ jobs:
       build-test-redis,
       build-test-redis-integration,
       build-test-runtime,
+      build-test-sqlclient,
       build-test-wcf,
       build-test-solution,
       verify-aot-compat
