[Exporter.Geneva] Resolve AOT warnings in OpenTelemetry.Exporter.Geneva (#1666)
Co-authored-by: Vishwesh Bankwar <vishweshbankwar@users.noreply.github.com>

--- a/test/OpenTelemetry.AotCompatibility.TestApp/OpenTelemetry.AotCompatibility.TestApp.csproj
+++ b/test/OpenTelemetry.AotCompatibility.TestApp/OpenTelemetry.AotCompatibility.TestApp.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <PublishAot>true</PublishAot>
     <TrimmerSingleWarn>false</TrimmerSingleWarn>
+    <EventSourceSupport>true</EventSourceSupport>
     <SelfContained>true</SelfContained>
   </PropertyGroup>
 
@@ -13,6 +14,7 @@
       When adding projects here please also update the verify-aot-compat job in
       .github\workflows\ci.yml so that it runs for the project(s) being added.
     -->
+    <TrimmerRootAssembly Include="OpenTelemetry.Exporter.Geneva" />
     <TrimmerRootAssembly Include="OpenTelemetry.Exporter.OneCollector" />
     <TrimmerRootAssembly Include="OpenTelemetry.Extensions" />
     <TrimmerRootAssembly Include="OpenTelemetry.Extensions.Enrichment" />
