--- a/src/OpenTelemetry.Resources.Gcp/OpenTelemetry.Resources.Gcp.csproj
+++ b/src/OpenTelemetry.Resources.Gcp/OpenTelemetry.Resources.Gcp.csproj
@@ -3,7 +3,7 @@
         <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
         <Description>OpenTelemetry Resource Detectors for Google Cloud Platform environments</Description>
         <PackageTags>$(PackageTags);ResourceDetector</PackageTags>
-        <MinVerTagPrefix>ResourceDetectors.GCP-</MinVerTagPrefix>
+        <MinVerTagPrefix>Resources.Gcp-</MinVerTagPrefix>
     </PropertyGroup>
 
     <ItemGroup>
